# python_API

./: .env.prod  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: data.py  database.py  main.py  model.py  routes.py  schema.py
tests/: main.py  test_main.py
